--- a/youtubeheader.css
+++ b/youtubeheader.css
@@ -5,7 +5,19 @@
     flex-direction: row;
     justify-content: space-between;
 
-
+    position: fixed; 
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(227, 227, 227);
+}
+button{
+    border: none;
+    background-color: white;
 }
 .owner-channel-img{
     width: 100%;
@@ -14,10 +26,27 @@
     width: 20px;
 }
 .right-section {
-    width: 150px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 182px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20px;
+    flex-shrink: 0;
 
+}
+.upload-icon {
+    height: 25px;
+    border: none;
+}
+.youtube-apps-icon {
+    height: 25px;
+}
+.notifications-icon {
+    height: 25px;
+}
+.current-user-picture {
+    height: 32px;
+    border-radius: 16px;
 }
 .middle-section {
     flex: 1;
@@ -34,12 +63,19 @@
     font-size: 15px;
     border-width: 1px;
     border-style: solid;
-    border-color: rgb(194, 194, 194);
+    border-color: rgb(192, 192, 192);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+    width: 0;
 }
 .searchbar::placeholder {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
 
+}
+.search-icon {
+    height: 25px;
+    margin-top: 4px;
 }
 .left-section {
     display: flex;
@@ -49,14 +85,25 @@
     height: 20px;
 }
 .hamburger-menu {
-    margin-left: 25px;
-    margin-right: 25px;
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 24px;
 }
 .search-button {
     height: 40px;
-    width: 60px;
+    width: 66px;
+    background-color: rgba(240, 240, 240);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192, 192, 192);
+    margin-left: -1px;
+
 }
 .voice-search-button {
     height: 40px;
     width: 40px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(248, 248, 248);
+    margin-left: 10px;
 }
