--- a/youtubeclone.css
+++ b/youtubeclone.css
@@ -1,6 +1,23 @@
 .thumbnail-row {
     margin-bottom: 15px;
     width: 100%;
+    position: relative;
+}
+.video-time {
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 10px;
+    right: 5px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 2px;
+
 }
 .thumbnail-1 {
     width: 100%;
