--- a/youtubeheader.css
+++ b/youtubeheader.css
@@ -5,6 +5,8 @@
     flex-direction: row;
     justify-content: space-between;
 
+    z-index: 100;
+
     position: fixed; 
     top: 0;
     left: 0;
@@ -43,6 +45,25 @@ button{
 }
 .notifications-icon {
     height: 25px;
+
+}
+.notifications-icon-container {
+    position: relative;
+}
+.notifications-count {
+   position: absolute;
+   top: -5;
+   right: -2;
+   background-color: rgb(197, 0, 0);
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-size: 11px;
+   padding-left: 5px;
+   padding-right: 5px;
+   padding-top: 2px;
+   padding-bottom: 2px;
+   color: white;
+   border-radius: 10px;
+
 }
 .current-user-picture {
     height: 32px;
