--- a/youtubeheader.css
+++ b/youtubeheader.css
@@ -52,8 +52,8 @@ button{
 }
 .notifications-count {
    position: absolute;
-   top: -5;
-   right: -2;
+   top: -6px;
+   right: -4px;
    background-color: rgb(197, 0, 0);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 11px;
