--- a/youtubegeneral.css
+++ b/youtubegeneral.css
@@ -5,6 +5,8 @@ p{
 }
 body {
     margin: 0;
-    padding-top: 80px;
-    padding-left: 80px;
+    padding-top: 58px;
+    padding-left: 75px;
+    padding-right: 5px;
+    background-color: #f9f9f9;
 }
