--- a/youtubeheader.css
+++ b/youtubeheader.css
@@ -128,3 +128,25 @@ button{
     background-color: rgb(248, 248, 248);
     margin-left: 10px;
 }
+.sidebar {
+    padding-top: 5px;
+    z-index: 500;
+}
+.sidebar-link {
+    height: 74px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 10px;
+
+}
+.sidebar-link:hover {
+    background-color: gray;
+}
+.sidebar-link img {
+    height: 24px;
+    margin-bottom: 5px;
+
+}
