--- a/youtubeclone.css
+++ b/youtubeclone.css
@@ -1,5 +1,5 @@
 .thumbnail-row {
-    margin-bottom: 15px;
+    margin-bottom: 8px;
     width: 100%;
     position: relative;
 }
@@ -36,7 +36,7 @@
 .video-title{
     margin-top: 0;
     line-height: 20px;
-    font-weight: 800;
+    font-weight: 300;
     font-size: 14px;
     margin-bottom: 10px;
 }
@@ -44,7 +44,8 @@
 .video-stats {
     color: rgb(96, 96, 96);
     font-size: 12px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .video-author {
-    margin-bottom: 5px;
+    margin-bottom: 3px;
 }
