--- a/youtubeheader.css
+++ b/youtubeheader.css
@@ -96,7 +96,6 @@ button{
 }
 .search-icon {
     height: 25px;
-    margin-top: 4px;
 }
 .left-section {
     display: flex;
@@ -119,6 +118,13 @@ button{
     border-color: rgb(192, 192, 192);
     margin-left: -1px;
 
+
+}
+.search-button , .voice-search-button, .upload-icon-container, .youtube-apps-container, .notifications-icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 .voice-search-button {
     height: 40px;
@@ -127,6 +133,26 @@ button{
     border: none;
     background-color: rgb(248, 248, 248);
     margin-left: 10px;
+}
+.search-button .tooltip, .voice-search-button .tooltip, .upload-icon-container .tooltip, .youtube-apps-container .tooltip, .notifications-icon-container .tooltip{
+    position: absolute;
+    background-color: grey;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+    border-radius: 2px;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    bottom: -30px;
+    opacity: 0;
+    pointer-events: none;
+    white-space: nowrap;
+}
+.search-button:hover .tooltip, .voice-search-button:hover .tooltip, .upload-icon-container:hover .tooltip, .youtube-apps-container:hover .tooltip, .notifications-icon-container:hover .tooltip{
+    opacity: 1;
+    transition: opacity 0.15s;
 }
 .sidebar {
     padding-top: 5px;
