--- a/youtubeclone.css
+++ b/youtubeclone.css
@@ -5,6 +5,10 @@
 }
 .video-grid {
     padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+    row-gap: 40px;
 }
 .video-time {
     background-color: black;
@@ -53,7 +57,8 @@
 
 
 
-.channel-tooltip {
+.channel-img {
+    display: inline-block;
     position: relative;
 }
 .channel-tooltip-container {
@@ -68,8 +73,30 @@
     box-shadow: 4px 4px 4px 2px #020202ab;
     z-index: 500;
     opacity: 0;
+    cursor: pointer;
 }
-.channel-tooltip-container:hover {
+.channel-img:hover .channel-tooltip-container {
     opacity: 1;
     cursor: pointer;
+    transition: 0.15s;
+}
+@media (max-width: 500px) {
+    .video-grid {
+        grid-template-columns: 1fr;
+    }
+}
+@media (max-width: 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width: 751px) and (max-width: 999px){
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
