--- a/youtubeheader.css
+++ b/youtubeheader.css
@@ -82,9 +82,7 @@ button{
     height: 36px;
     padding-left: 10px;
     font-size: 15px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(192, 192, 192);
+    border: 1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
     width: 0;
